--- a/index.html
+++ b/index.html
@@ -1,89 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <body style="background-color:#308a8573;">
-        <h1 style="text-align: center; font-size: 200%;">KONGU ENGINEERING COLLEGE</h1>
-        <p style="text-align:center;" >
-           <b> WEB TECHNOLOGY LAB RECORD</b>
+    <head>
+        <title>MAHESHSRIRAM'S RESUME</title>
+    </head>
+    <BOdy>
+        <H1>
+        HI I AM MAHESHSRIRAM
+        </H1><br><br><br>
+        <h2>
+            Studying in KEC
+        </h2>
+        <a href="www.google.co.in">LINK OF YOUTUBE</a>
+        <h3>
+            ITIANS
+        </h3>
+        <P>
+            I AM 18 YEARS OLD
+        </P>
+        <p>
+            I am a good boy
         </p>
-        <img src="gopi.jpg" alt=""style="width: 200px; float : right;" >
-        <p><strong>NAME</strong> : GOPINATH K</p>
-        <p><strong>ROLL NUMBER</strong> : 19ITR022</p>
-        <p><Strong>DEPARTMENT</Strong> : INFORMATION TECHNOLOGY</p>
-        <p><strong>SECTION</strong> : 'A'</p>
-        <table border="1"style="width:100%; height: 200%;">
-            <tr style="background-color: darkcyan;">
-                <th>
-                    S.NO
-                </th>
-                <th>
-                    NAME OF THE EXPERIMENT
-                </th>
-                <th>EXPERIMENT LINK</th>
-            </tr>
-            <tr style="background-color: blueviolet;">
-                <td>
-                    1
-                </td>
-                <td>Design a web page using HTML tags and host it in githubrepository.</td>
-                <td><a href="https://gopinathide.github.io/resume/">link </a></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Design an attractive webpage using style sheets</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr style="background-color: blueviolet;">
-                <td>3</td>
-            <td>Design a responsive website using Bootstrap.</td>
-            <td><a href="">link</a></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Design a webpage to create simple interactive CGPA calculator using Event Handling</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr style="background-color: blueviolet;">
-                <td>5</td>
-                <td>Design a web application using HTTP Request and HTTP Response</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>Develop simple login page by performing event handling using GET and POST method</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr style="background-color: blueviolet;">
-                <td>7</td>
-                <td>Design a simple calculator using 'Modules' in Node.js.</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>Design a webpage to maintain personal information using CRUD operations in MongoDB.</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr style="background-color: blueviolet;">
-                <td>9</td>
-                <td>Design a Payroll Management System using typescript.</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>Design a web application using components, modules and router in Angular.</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr style="background-color: blueviolet;">
-                <td>11</td>
-                <td>Design a reactive form to maintain personal information and perform validation usingAngular.</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>Develop and deploy eCart management system using Angular.</td>
-                <td><a href="">link</a></td>
-            </tr>
-            <h1></h1>
-        </table>
-
-    </body>
+        <img src="imgmahesh.jpg" alt="">
+    </BOdy>
 </html>
