--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     &nbsp;&nbsp; 1
                 </td>
                 <td>Design a web page using HTML tags and host it in githubrepository.</td>
-                <td><a href="https://youtube.com"> <img src="click.gif" alt="" height="32" width="140"></a></td>
+                <td><a href="https://google.co.in"> <img src="click.gif" alt="" height="32" width="140"></a></td>
             </tr>
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;2</td>
