--- a/index.html
+++ b/index.html
@@ -144,8 +144,11 @@
             <h1></h1>
         </table>
         <br><br>
-          <footer>
-            <p>Copyright © 2020 MAHESHSRIRAM . All rights reserved.</p>
-          </footer>  
+        <footer>
+            <div  _ngcontent-fuk-c2="" class="gettheApp"><div _ngcontent-fuk-c2="" class="container-fluid container-gutter"><div _ngcontent-fuk-c2="" class="row"><div _ngcontent-fuk-c2="" class="col-lg-12"><h3 style="text-align: center;" _ngcontent-fuk-c2="" class="footer-heading text-center">&emsp;&emsp;Get The App</h3></div></div><div _ngcontent-fuk-c2="" class="row d-flex justify-content-center align-items-center text-center"><div _ngcontent-fuk-c2="" class="col-md-offset-3 col-sm-offset-2 col-md-12 col-sm-12 col-xs-12"><a _ngcontent-fuk-c2="" class="col-md-4 col-sm-6 col-xs-6" href="javascript:;"><img style="margin-left: 40;"  _ngcontent-fuk-c2="" alt="App Store Icon" src="appstoreicon.png" title="App Store Icon"></a><a _ngcontent-fuk-c2="" class="col-md-4 col-sm-6 col-xs-6" href="https://play.google.com/store/apps/details?id=com.godbtech.nipponindiamf"><img style="margin-left: 25;" _ngcontent-fuk-c2="" alt="Google Play Icon" src="googleplayicon.png" title="Google Play Icon"></a></div></div></div></div><br>
+            <div _ngcontent-fuk-c2="" class="social-sec"><div _ngcontent-fuk-c2="" class="container-fluid container-gutter"><div _ngcontent-fuk-c2="" class="row text-center"><div _ngcontent-fuk-c2="" class="col-lg-12"><h3 style="text-align: center;" _ngcontent-fuk-c2="" class="footer-heading text-center">&emsp;&emsp;Be Social With Me..</h3></div></div><div _ngcontent-fuk-c2="" class="row"><div _ngcontent-fuk-c2="" class="col-lg-12"><ul _ngcontent-fuk-c2="" class="d-flex justify-content-center align-items-center"><a _ngcontent-fuk-c2="" href="https://www.facebook.com"><img style="height: 75;width: 75;margin-left: 5;" _ngcontent-fuk-c2="" alt="Facebook icon" src="fbicon.gif" title="Facebook icon"></a></li><a _ngcontent-fuk-c2="" href="https://www.instagram.com"><img style="height: 75 ;width: 75;" _ngcontent-fuk-c2="" alt="Insdtagram icon" src="insticon.gif" title="Instagram icon"></a><a _ngcontent-fuk-c2="" href="https://twitter.com";><img style="width: 75;height: 75;" _ngcontent-fuk-c2="" alt="Twitter icon" src="twiicon.gif" title="Twitter icon"></a><a _ngcontent-fuk-c2="" href="https://www.linkedin.com"><img style="width: 75;height: 75;" alt="LinkedIn icon" src="linkdicon.gif" title="LinkedIn icon"></a><a _ngcontent-fuk-c2="" href="https://www.youtube.com"><img style="height: 75;width: 75;" _ngcontent-fuk-c2="" alt="YouTube icon" src="yticon.gif" title="YouTube icon"></a></li></ul></div></div></div></div>
+            <br><br>
+            <p>&emsp;&emsp;&emsp;&nbsp;&nbsp;Copyright © 2020 MAHESHSRIRAM . All rights reserved.</p>
+        </footer>  
     </BOdy>
 </html>
