--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <title>KEC-IT </title>
     </head>
     
-    <BOdy background="back.gif">
+    <BOdy background="background.gif">
         <div class="top-container" style="padding-bottom:3px; ">
             <div class="row">
                 <div class="col-md-1" style="text-align: right; background-color:#16336d;">
