--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp; 2</td>
                 <td>Design an attractive webpage using style sheets</td>
-                <td><a href="final.html"><img src="click.gif" alt="" height="32" width="140"></a></td>
+                <td><a href="https://maheshsriramide.github.io/RINGTONE/"><img src="click.gif" alt="" height="32" width="140"></a></td>
             </tr>
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;3</td>
