--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;3</td>
             <td>Design a responsive website using Bootstrap.</td>
-            <td><a href=""><img src="https://maheshsriramide.github.io/BOOTSTRAP/" alt="" height="32" width="140"></a></td>
+            <td><a href=""><img src="https://maheshsriramide.github.io/BOOT_STYLE/" alt="" height="32" width="140"></a></td>
             </tr>
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;4</td>
