--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;4</td>
                 <td>Design a webpage to create simple interactive CGPA calculator using Event Handling</td>
-                <td><a href=""><img src="click.gif" alt="" height="32" width="140"></a></td>
+                <td><a href="https://maheshsriramide.github.io/JAVASCRIPT/"><img src="click.gif" alt="" height="32" width="140"></a></td>
             </tr>
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;5</td>
