--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;5</td>
                 <td>Design a web application using HTTP Request and HTTP Response</td>
-                <td><a href=""><img src="click.gif" alt="" height="32" width="140"></a></td>
+                <td><a href="https://maheshsriramide.github.io/JAVASCRIPT/"><img src="click.gif" alt="" height="32" width="140"></a></td>
             </tr>
             <tr style="background-color: gainsboro;">
                 <td>&nbsp;&nbsp;6</td>
